--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div id="loader" class="preloader" style="visibility: visible; opacity: 1;">
+    <div id="loader" class="preloader">
         <div class="d-flex flex-column justify-content-center align-items-center">
             <div class="site-logo">
                 <img width="200px" src="assets/images/Nexy_Logo.png" alt="">
