--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <title>Nexy Dashboard</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- Font Awsome Icon CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <!-- Preloader CSS -->
     <link rel="stylesheet" href="assets/css/loader.css">
+    <!-- Custom Style CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -27,7 +32,116 @@
             </div>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <div class="main">
+        <div class="form-container">
+            <div class="container-fluid">
+                <div class="form-wrapper">
+                    <div class="form-header-top d-flex flex-column justify-content-center align-items-center text-center">
+                        <div class="form-site-logo mb-3">
+                            <img width="70" src="assets/images/Nexy_Logo.png" alt="">
+                        </div>
+                        <h2 class="fw-bold mb-3">Login</h2>
+                        <p class="fw-normal mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incident ut labore et dolore.</p>
+                    </div>
+                    <ul class="nav nav-pills mb-4 d-flex justify-content-around" id="login-tab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link bg-transparent px-0 py-1 position-relative fw-bold active" id="pills-directors-tab" data-bs-toggle="pill" data-bs-target="#pills-directors" type="button" role="tab" aria-controls="pills-directors" aria-selected="true">Directors</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link bg-transparent px-0 py-1 position-relative fw-bold" id="pills-manager-tab" data-bs-toggle="pill" data-bs-target="#pills-manager" type="button" role="tab" aria-controls="pills-manager" aria-selected="false">Manager</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link bg-transparent px-0 py-1 position-relative fw-bold" id="pills-collaborator-tab" data-bs-toggle="pill" data-bs-target="#pills-collaborator" type="button" role="tab" aria-controls="pills-collaborator" aria-selected="false">Collaborator</button>
+                        </li>
+                    </ul>
+                    <div class="tab-content" id="pills-tabContent">
+                        <div class="tab-pane fade show active" id="pills-directors" role="tabpanel" aria-labelledby="pills-directors-tab" tabindex="0">
+                            <div class="form-content">
+                                <form class="loginForm" action="">
+                                    <div class="form-group position-relative mb-4 pb-2">
+                                        <input type="text" class="form-control" placeholder="Please enter email address">
+                                        <span class="input-icon"><img width="20px" src="assets/images/icon/envlope.png" alt=""></span>
+                                    </div>
+                                    <div class="form-group position-relative mb-4 pb-2">
+                                        <input type="password" class="form-control" placeholder="Password">
+                                        <span class="input-icon"><img width="20px" src="assets/images/icon/password.png" alt=""></span>
+                                    </div>
+                                    <div class="form-group position-relative">
+                                        <input type="submit" class="btn theme-btn-primary form-control fw-bold " value="Log In">
+                                    </div>
+                                </form>
+                                <div class="text-center">
+                                    <a href="#" class="text-decoration-none fw-normal theme-green">Forgot Password?</a>
+                                </div>
+                                <div class="devider overflow-hidden position-relative">
+                                    <span class="theme-gray position-relative z-1">or</span>
+                                    <span></span>
+                                </div>
+                                <div class="text-center pb-0 pb-md-2">
+                                    <span class="theme-gray">You do not have an account? </span><a href="signup.html" class="fw-normal theme-green">Join Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="pills-manager" role="tabpanel" aria-labelledby="pills-manager-tab" tabindex="0">
+                            <div class="form-content">
+                                <form class="loginForm" action="">
+                                    <div class="form-group position-relative mb-4 pb-2">
+                                        <input type="text" class="form-control" placeholder="Please enter email address">
+                                        <span class="input-icon"><img width="20px" src="assets/images/icon/envlope.png" alt=""></span>
+                                    </div>
+                                    <div class="form-group position-relative mb-4 pb-2">
+                                        <input type="password" class="form-control" placeholder="Password">
+                                        <span class="input-icon"><img width="20px" src="assets/images/icon/password.png" alt=""></span>
+                                    </div>
+                                    <div class="form-group position-relative">
+                                        <input type="submit" class="btn theme-btn-primary form-control fw-bold " value="Log In">
+                                    </div>
+                                </form>
+                                <div class="text-center">
+                                    <a href="#" class="text-decoration-none fw-normal theme-green">Forgot Password?</a>
+                                </div>
+                                <div class="devider overflow-hidden position-relative">
+                                    <span class="theme-gray position-relative z-1">or</span>
+                                    <span></span>
+                                </div>
+                                <div class="text-center pb-0 pb-md-2">
+                                    <span class="theme-gray">You do not have an account? </span><a href="signup.html" class="fw-normal theme-green">Join Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="pills-collaborator" role="tabpanel" aria-labelledby="pills-collaborator-tab" tabindex="0">
+                            <div class="form-content">
+                                <form class="loginForm" action="">
+                                    <div class="form-group position-relative mb-4 pb-2">
+                                        <input type="text" class="form-control" placeholder="Please enter email address">
+                                        <span class="input-icon"><img width="20px" src="assets/images/icon/envlope.png" alt=""></span>
+                                    </div>
+                                    <div class="form-group position-relative mb-4 pb-2">
+                                        <input type="password" class="form-control" placeholder="Password">
+                                        <span class="input-icon"><img width="20px" src="assets/images/icon/password.png" alt=""></span>
+                                    </div>
+                                    <div class="form-group position-relative">
+                                        <input type="submit" class="btn theme-btn-primary form-control fw-bold " value="Log In">
+                                    </div>
+                                </form>
+                                <div class="text-center">
+                                    <a href="#" class="text-decoration-none fw-normal theme-green">Forgot Password?</a>
+                                </div>
+                                <div class="devider overflow-hidden position-relative">
+                                    <span class="theme-gray position-relative z-1">or</span>
+                                    <span></span>
+                                </div>
+                                <div class="text-center pb-0 pb-md-2">
+                                    <span class="theme-gray">You do not have an account? </span><a href="signup.html" class="fw-normal theme-green">Join Now</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
