Update SignUp Responsive

--- a/signup.html
+++ b/signup.html
@@ -124,42 +124,42 @@
                                     <div class="text-center mt-4 pb-1">
                                         <a href="#" class="theme-green">Beneficit to your business</a>
                                     </div>
-                                    <div class="row justify-content-around my-4 pb-1">
-                                        <div class="col-2 px-1 px-md-0 d-flex">
-                                            <div class="benifit card bg-theme-dark p-4 d-flex flex-column align-items-center justify-content-center w-100">
-                                                <div class="text-center mb-3">
+                                    <div class="row justify-content-center justify-content-lg-around my-4 pb-1">
+                                        <div class="col-6 col-md-4 col-lg-2 p-3  p-md-4 p-lg-0 d-flex">
+                                            <div class="benifit card bg-theme-dark p-3 p-md-4 d-flex flex-column align-items-center justify-content-center w-100">
+                                                <div class="text-center mb-3 pt-2 pt-md-0">
                                                     <img width="90px" src="assets/images/icon/page_info.png" alt="">
                                                 </div>
                                                 <span class="text-center theme-green">Control your team</span>
                                             </div>
                                         </div>
-                                        <div class="col-2 px-1 px-md-0 d-flex">
-                                            <div class="benifit card bg-theme-dark p-4 d-flex flex-column align-items-center justify-content-center w-100">
-                                                <div class="text-center mb-3">
+                                        <div class="col-6 col-md-4 col-lg-2 p-3  p-md-4 p-lg-0 d-flex">
+                                            <div class="benifit card bg-theme-dark p-3 p-md-4 d-flex flex-column align-items-center justify-content-center w-100">
+                                                <div class="text-center mb-3 pt-2 pt-md-0">
                                                     <img width="90px" src="assets/images/icon/Group 427318988.png" alt="">
                                                 </div>
                                                 <span class="text-center theme-green">Effective lead control</span>
                                             </div>
                                         </div>
-                                        <div class="col-2 px-1 px-md-0 d-flex">
-                                            <div class="benifit card bg-theme-dark p-4 d-flex flex-column align-items-center justify-content-center w-100">
-                                                <div class="text-center mb-3">
+                                        <div class="col-6 col-md-4 col-lg-2 p-3  p-md-4 p-lg-0 d-flex">
+                                            <div class="benifit card bg-theme-dark p-3 p-md-4 d-flex flex-column align-items-center justify-content-center w-100">
+                                                <div class="text-center mb-3 pt-2 pt-md-0">
                                                     <img width="90px" src="assets/images/icon/forward-item.png" alt="">
                                                 </div>
                                                 <span class="text-center theme-green">Ease of use and intuitive interface</span>
                                             </div>
                                         </div>
-                                        <div class="col-2 px-1 px-md-0 d-flex">
-                                            <div class="benifit card bg-theme-dark p-4 d-flex flex-column align-items-center justify-content-center w-100">
-                                                <div class="text-center mb-3">
+                                        <div class="col-6 col-md-4 col-lg-2 p-3  p-md-4 p-lg-0 d-flex">
+                                            <div class="benifit card bg-theme-dark p-3 p-md-4 d-flex flex-column align-items-center justify-content-center w-100">
+                                                <div class="text-center mb-3 pt-2 pt-md-0">
                                                     <img width="90px" src="assets/images/icon/ocean-protocol-(ocean).png" alt="">
                                                 </div>
                                                 <span class="text-center theme-green">secure and encrypted system</span>
                                             </div>
                                         </div>
-                                        <div class="col-2 px-1 px-md-0 d-flex">
-                                            <div class="benifit card bg-theme-dark p-4 d-flex flex-column align-items-center justify-content-center w-100">
-                                                <div class="text-center mb-3">
+                                        <div class="col-6 col-md-4 col-lg-2 p-3  p-md-4 p-lg-0 d-flex">
+                                            <div class="benifit card bg-theme-dark p-3 p-md-4 d-flex flex-column align-items-center justify-content-center w-100">
+                                                <div class="text-center mb-3 pt-2 pt-md-0">
                                                     <img width="90px" src="assets/images/icon/people.png" alt="">
                                                 </div>
                                                 <span class="text-center theme-green">Integrated collaboration</span>
@@ -171,8 +171,8 @@
                                     <div class="form-site-logo mb-3 text-center">
                                         <img width="70" src="assets/images/Nexy_Logo.png" alt="">
                                     </div>
-                                    <div class="row justify-content-around my-4 pb-1">
-                                        <div class="col-7 d-flex">
+                                    <div class="row flex-column-reverse flex-md-row justify-content-around my-4 pb-1 px-4 px-md-3 px-lg-0">
+                                        <div class="col-md-6 col-lg-7 d-flex mt-4 mt-md-0">
                                             <div class="benifit bg-transparent d-flex flex-column w-100">
                                                 <h1 class="mb-4 text-start w-100">Let’s Make Payment</h1>
                                                 <p class="mb-3 theme-gray">To start your subscription, input your card details to make payment. 
@@ -239,7 +239,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-5 d-flex">
+                                        <div class="col-md-6 col-lg-5 d-flex">
                                             <div class="payment card bg-theme-deeep-dark p-4 d-flex flex-column w-100 justify-content-between">
                                                 <div class="header-content">
                                                     <p class="mb-3 theme-gray">You’re paying,</p>
@@ -262,7 +262,7 @@
                                                 </div>
                                                 
                                                 <ul class="d-flex flex-column p-0 m-0">
-                                                    <hr class="opacity-100 my-5">
+                                                    <hr class="opacity-100 my-3 my-md-4 my-lg-5">
                                                     <li class="d-flex justify-content-between mb-3">
                                                         <div class="product">
                                                             <h3 class="mb-0 theme-of-white">Total</h3>
@@ -294,7 +294,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="form-wrapper mt-0 px-5 px-md-4">
+                <div class="form-wrapper mt-0 px-4 px-md-3">
                     <ul class="step-bar">
                         <li class="step active">
                             <span>Step 1</span>
