--- a/signup.html
+++ b/signup.html
@@ -124,11 +124,11 @@
                                     <div class="text-center mt-4 pb-1">
                                         <a href="#" class="theme-green">Beneficit to your business</a>
                                     </div>
-                                    <div class="row justify-content-center justify-content-lg-around my-4 pb-1">
+                                    <div class="row justify-content-center justify-content-lg-around my-4 mb-0 pb-1">
                                         <div class="col-6 col-md-4 col-lg-2 p-3  p-md-4 p-lg-0 d-flex">
                                             <div class="benifit card bg-theme-dark p-3 p-md-4 d-flex flex-column align-items-center justify-content-center w-100">
                                                 <div class="text-center mb-3 pt-2 pt-md-0">
-                                                    <img width="90px" src="assets/images/icon/page_info.png" alt="">
+                                                    <img width="70px" src="assets/images/icon/page_info.png" alt="">
                                                 </div>
                                                 <span class="text-center theme-green">Control your team</span>
                                             </div>
@@ -136,7 +136,7 @@
                                         <div class="col-6 col-md-4 col-lg-2 p-3  p-md-4 p-lg-0 d-flex">
                                             <div class="benifit card bg-theme-dark p-3 p-md-4 d-flex flex-column align-items-center justify-content-center w-100">
                                                 <div class="text-center mb-3 pt-2 pt-md-0">
-                                                    <img width="90px" src="assets/images/icon/Group 427318988.png" alt="">
+                                                    <img width="70px" src="assets/images/icon/Group 427318988.png" alt="">
                                                 </div>
                                                 <span class="text-center theme-green">Effective lead control</span>
                                             </div>
@@ -144,7 +144,7 @@
                                         <div class="col-6 col-md-4 col-lg-2 p-3  p-md-4 p-lg-0 d-flex">
                                             <div class="benifit card bg-theme-dark p-3 p-md-4 d-flex flex-column align-items-center justify-content-center w-100">
                                                 <div class="text-center mb-3 pt-2 pt-md-0">
-                                                    <img width="90px" src="assets/images/icon/forward-item.png" alt="">
+                                                    <img width="70px" src="assets/images/icon/forward-item.png" alt="">
                                                 </div>
                                                 <span class="text-center theme-green">Ease of use and intuitive interface</span>
                                             </div>
@@ -152,7 +152,7 @@
                                         <div class="col-6 col-md-4 col-lg-2 p-3  p-md-4 p-lg-0 d-flex">
                                             <div class="benifit card bg-theme-dark p-3 p-md-4 d-flex flex-column align-items-center justify-content-center w-100">
                                                 <div class="text-center mb-3 pt-2 pt-md-0">
-                                                    <img width="90px" src="assets/images/icon/ocean-protocol-(ocean).png" alt="">
+                                                    <img width="70px" src="assets/images/icon/ocean-protocol-(ocean).png" alt="">
                                                 </div>
                                                 <span class="text-center theme-green">secure and encrypted system</span>
                                             </div>
@@ -160,7 +160,7 @@
                                         <div class="col-6 col-md-4 col-lg-2 p-3  p-md-4 p-lg-0 d-flex">
                                             <div class="benifit card bg-theme-dark p-3 p-md-4 d-flex flex-column align-items-center justify-content-center w-100">
                                                 <div class="text-center mb-3 pt-2 pt-md-0">
-                                                    <img width="90px" src="assets/images/icon/people.png" alt="">
+                                                    <img width="70px" src="assets/images/icon/people.png" alt="">
                                                 </div>
                                                 <span class="text-center theme-green">Integrated collaboration</span>
                                             </div>
@@ -171,7 +171,7 @@
                                     <div class="form-site-logo mb-3 text-center">
                                         <img width="70" src="assets/images/Nexy_Logo.png" alt="">
                                     </div>
-                                    <div class="row flex-column-reverse flex-md-row justify-content-around my-4 pb-1 px-4 px-md-3 px-lg-0">
+                                    <div class="row flex-column-reverse flex-md-row justify-content-around my-4 mb-0 pb-1 px-4 px-md-3 px-lg-0">
                                         <div class="col-md-6 col-lg-7 d-flex mt-4 mt-md-0">
                                             <div class="benifit bg-transparent d-flex flex-column w-100">
                                                 <h1 class="mb-4 text-start w-100">Let’s Make Payment</h1>
