--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                         <span class="input-icon"><img width="20px" src="assets/images/icon/password.png" alt=""></span>
                                     </div>
                                     <div class="form-group position-relative">
-                                        <input type="submit" class="btn theme-btn-primary form-control fw-bold " value="Log In">
+                                        <input type="submit" class="btn theme-btn-primary w-100 fw-bold " value="Log In">
                                     </div>
                                 </form>
                                 <div class="text-center">
@@ -94,7 +94,7 @@
                                         <span class="input-icon"><img width="20px" src="assets/images/icon/password.png" alt=""></span>
                                     </div>
                                     <div class="form-group position-relative">
-                                        <input type="submit" class="btn theme-btn-primary form-control fw-bold " value="Log In">
+                                        <input type="submit" class="btn theme-btn-primary w-100 fw-bold " value="Log In">
                                     </div>
                                 </form>
                                 <div class="text-center">
@@ -121,7 +121,7 @@
                                         <span class="input-icon"><img width="20px" src="assets/images/icon/password.png" alt=""></span>
                                     </div>
                                     <div class="form-group position-relative">
-                                        <input type="submit" class="btn theme-btn-primary form-control fw-bold " value="Log In">
+                                        <input type="submit" class="btn theme-btn-primary w-100 fw-bold " value="Log In">
                                     </div>
                                 </form>
                                 <div class="text-center">
